adding rabbitmq profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.data.mongodb.database=events_db
 
 spring.jackson.serialization.write_dates_as_timestamps=false
 
-spring.profiles.active=activemq
+#spring.profiles.active=activemq
+spring.profiles.active=rabbitmq
+
