adding kafka profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,9 @@ spring.jackson.serialization.write_dates_as_timestamps=false
 
 #spring.profiles.active=activemq
 spring.profiles.active=rabbitmq
+#spring.profiles.active=kafka
+
+queues.events_to_be_created=events_to_be_created
+queues.events_to_be_updated=events_to_be_updated
+queues.events_to_be_deleted=events_to_be_deleted
 
