--- a/src/main/resources/application-rabbitmq.properties
+++ b/src/main/resources/application-rabbitmq.properties
@@ -1,1 +1,1 @@
-# default message broker url -> amqp://guest@127.0.0.1:5672
+spring.rabbitmq.addresses=amqp://guest:guest@custom-rabbitmq-broker:5672
