--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,11 @@
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=root
 spring.data.mongodb.password=root
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=db
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=events_db
 
 spring.jackson.serialization.write_dates_as_timestamps=false
-
-#spring.profiles.active=activemq
-spring.profiles.active=rabbitmq
-#spring.profiles.active=kafka
 
 queues.events_to_be_created=events_to_be_created
 queues.events_to_be_updated=events_to_be_updated
