--- a/src/main/resources/application-activemq.properties
+++ b/src/main/resources/application-activemq.properties
@@ -1,3 +1,3 @@
-spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.broker-url=tcp://custom-activemq-broker:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
