--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.data.mongodb.database=events_db
 
 spring.jackson.serialization.write_dates_as_timestamps=false
 
-queues.events_to_be_created=events_to_be_created
-queues.events_to_be_updated=events_to_be_updated
-queues.events_to_be_deleted=events_to_be_deleted
+# destination: topics or queues
+events_to_be_created=events_to_be_created
+events_to_be_updated=events_to_be_updated
+events_to_be_deleted=events_to_be_deleted
 
