--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
   <properties>
     <java.version>11</java.version>
 		<jackson-datatype-jsr310.version>2.11.2</jackson-datatype-jsr310.version>
+    <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
+    <springfox-swagger2-ui.version>2.9.2</springfox-swagger2-ui.version>
   </properties>
 
   <dependencies>
@@ -37,6 +39,16 @@
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
       <version>${jackson-datatype-jsr310.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>${springfox-swagger2.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>${springfox-swagger2-ui.version}</version>
     </dependency>
 
     <dependency>
