--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,7 @@
   <properties>
     <java.version>11</java.version>
 		<jackson-datatype-jsr310.version>2.11.2</jackson-datatype-jsr310.version>
-    <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
-    <springfox-swagger2-ui.version>2.9.2</springfox-swagger2-ui.version>
+    <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
   </properties>
 
   <dependencies>
@@ -33,7 +32,7 @@
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
@@ -42,13 +41,8 @@
     </dependency>
     <dependency>
       <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger2</artifactId>
-      <version>${springfox-swagger2.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger-ui</artifactId>
-      <version>${springfox-swagger2-ui.version}</version>
+      <artifactId>springfox-boot-starter</artifactId>
+      <version>${springfox-boot-starter.version}</version>
     </dependency>
 
     <dependency>
@@ -78,5 +72,13 @@
       </plugin>
     </plugins>
   </build>
+
+  <repositories>
+    <repository>
+      <id>jcenter-snapshots</id>
+      <name>jcenter</name>
+      <url>https://jcenter.bintray.com/</url>
+    </repository>
+  </repositories>
 
 </project>
