--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.1.RELEASE</version>
+    <version>2.4.3</version>
   </parent>
 
   <groupId>com.task</groupId>
@@ -15,7 +15,7 @@
 
   <properties>
     <java.version>11</java.version>
-		<jackson-datatype-jsr310.version>2.11.2</jackson-datatype-jsr310.version>
+    <jackson-datatype-jsr310.version>2.11.2</jackson-datatype-jsr310.version>
     <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
   </properties>
 
