--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.application.name=messaging-poc
-
+# DB connection configs
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bank
 spring.datasource.username=root
 spring.datasource.password=root
 
+# MB connection configs
+# 1 APP is made for 1 QUEUE
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=
 spring.activemq.password=
